--- a/pom.xml
+++ b/pom.xml
@@ -55,10 +55,18 @@
 			<artifactId>spring-boot-admin-starter-client</artifactId>
 			<version>1.5.4</version>
 		</dependency>
+
+		<!--Register in server Admin-->
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>1.5.4</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
 		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
