--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,5 @@
 server:
-  port: 8080
+  port: 8761
 
 security:
   basic:
@@ -21,3 +21,6 @@ eureka:
   client:
     register-with-eureka: true
     fetch-registry: true
+  instance:
+    prefer-ip-address: false
+
